resources/screen-common.less
@import 'variables.less';

/* Page layout */

html,
body {
	margin: 0;
	padding: 0;
}

body {
	font-family: @fonts;
	color: @text;
	// Footer colour; results in a weird distracting dark scrollbar in firefox, but fuck firefox
	// Setting it here avoids a jump to white after the footer, which is even more distracting
	background: @base80;
	font-size: @font-size;
	line-height: 1.5;
}

#mw-content {
	.box;
	background: @background;
	padding: 1em @content-padding 3em;

	.toc {
		background: @base90;
	}
}

#bodyContentOuter {
	/* Set a z-index for the content to group it away from any nav stuff (extensions) - T200148 */
	position: relative;
	z-index: 0;
}

.mw-body {
	word-wrap: break-word;
}

.mw-footer-container {
	color: #000;
	font-size: 0.925em;

	ul {
		margin: 0;
	}
}

#p-logo {
	text-align: center;
	margin: auto;
}

#p-logo-text {
	max-width: @column-left-size;
	text-align: center;
	line-height: 1;

	a {
		padding: 0.1em 1em 0.2em;
		color: @text;
		font-family: @fonts-secondary;
		font-variant: small-caps;
		font-size: 1.85em;
		display: block;

		/* 13+ character names */
		&.long {
			font-size: 1.5em;
			padding: 0 0.75em 0 0;
			line-height: 0.8;
		}

		/* images */
		&.wordmark {
			padding: 0 0.5em 0 0;
		}
	}
}

/* Search */

#simpleSearch {
	box-shadow: inset 0 2px 4px 0 rgba( 0, 0, 0, 0.05 );
	background: @background;
	position: relative;
	border: solid 1px @base70;
}

#searchInput {
	border: 0;
	margin: 0;
	height: 2.1em;
	padding: 0.4em 4.5em 0.2em 2em;
	box-shadow: none;
	background: transparent;
	width: 100%;
	min-height: 0;
	font-family: inherit;
}

#searchButton,
#mw-searchButton {
	position: absolute;
	top: 0;
	margin: 0;
	padding: 0;
	right: 1.5em;
	width: 2.5em;
	height: 2.5em;
	.icon;
	background-image: url( images/search-ltr.svg );
	/* @noflip */
	background-position: center 40%;
	box-shadow: none;
}

.suggestions {
	background: @background;
	box-shadow: 0 2px 2px 1px rgba( 0, 0, 0, 0.05 );

	.suggestions-special {
		background-color: @background;
		border: 1px solid @base70;
		border-bottom-width: @border;
		padding: 0.75em 2em;
	}

	.suggestions-results {
		background-color: @background;
		border: 1px solid @base70;
		border-bottom-width: @border;
	}

	.suggestions-result {
		color: @text;
		padding: 0.65em 2em 0.35em;
	}

	.suggestions-result-current {
		background-color: @blue;
		color: @background;
	}
}

.dropdown-toggle {
	.dropdown-header();
}

/* Footer */

.mw-footer {
	margin: auto;
	padding: 1.25em 1.75em;

	ul,
	li {
		margin: 1em 0;
		list-style: none;
		padding: 0;
	}

	#footer-list {
		display: -ms-flexbox;
		display: flex;
		flex-direction: column;
		flex: 1 1 100%;
	}

	#footer-icons {
		display: -ms-flexbox;
		display: flex;
		flex-direction: row;
	}

	.footer-icons {
		margin: 0 0 1em 1em;
	}

	#footer-places li {
		display: inline-block;
		margin: 0 1em 0 0;
	}

	#lastmod,
	#credits,
	#copyright {
		display: block;
	}
}

/* Content */

#mw-content-container {
	background: @base80;
}

.tools-inline,
.tools-inline & {
	div,
	ul,
	li {
		list-style: none;
		display: inline-block;
		margin: 0;
		padding: 0;
	}
}

.tools-inline li {
	margin: 0.5em 0;
	border-bottom: solid 3px transparent;

	&:hover {
		border-bottom-color: @base70;
	}

	&.selected {
		border-bottom-color: @blue;

		a {
			color: @text;
		}
	}

	a {
		.ca-icon( 'images/page-tools-grey' );

		&:hover {
			text-decoration: none;
		}
	}
}

/* Style for Wikiplus */
#Wikiplus-Edit-TopBtn a {
	.ca-icon( 'images/wikitext-grey' );
}

/* Style for ToolsRedirect */
#ca-redirect a {
	.ca-icon( 'images/redirect-grey-ltr' );
}

.mw-content-rtl #ca-redirect a {
	.ca-icon( 'images/redirect-grey-rtl' );
}

/* Style for MassEditRegex */
#ca-masseditregex a {
	.ca-icon( 'images/pencil-batch-grey' );
}


#p-namespaces {
	float: left;

	li {
		margin-right: 1em;
	}
}

#p-views,
#p-more {
	float: right;

	li {
		margin-left: 1em;
	}
}

#ca-watch a {
	.ca-icon( 'images/star' );
	.ca-icon-only();
}

#ca-unwatch a {
	.ca-icon( 'images/star-filled' );
	.ca-icon-only();
}

#ca-unwatch.mw-watchlink-temp a {
	.ca-icon( 'images/star-half-filled' );
	.ca-icon-only();
}

#ca-edit a {
	.ca-icon( 'images/pencil-grey' );
}

#ca-history a {
	.ca-icon( 'images/clock-grey' );
}

#ca-talk a {
	.ca-icon( 'images/talk-grey' );
}

#ca-addsection a {
	.ca-icon( 'images/plus-grey' );
}

#ca-viewsource a {
	.ca-icon( 'images/brackets-grey' );
}

#ca-view a,
#ca-view-foreign a {
	.ca-icon( 'images/eyeball-grey' );
}

#ca-view {
	.hidden();
}

.tools-inline li[ id^='ca-nstab-' ] a {
	.ca-icon( 'images/page-grey' );
}

#siteNotice {
	font-size: 95%;
	margin: 0.5em auto 1.5em;
}

#localNotice {
	padding: 0;
	text-align: center;

	p {
		margin-left: 1em;
		margin-right: 1em;
	}
}

/* Misc */

a {
	text-decoration: none;
	color: @link;

	&:hover {
		color: darken( @link, 10% );
		text-decoration: underline;
	}

	&:visited {
		color: @link-visited;

		&:hover {
			color: darken( @link-visited, 10% );
		}
	}
}

a.new,
.new a {
	color: @link-red;

	&:hover {
		color: darken( @link-red, 10% );
	}

	&:visited {
		color: @link-red-visited;

		&:hover {
			color: darken( @link-red-visited, 10% );
		}
	}
}

.mw-parser-output a.extiw,
.mw-parser-output a.extiw:active,
.mw-parser-output a.external {
	color: @link-ext;
	background-image: url( images/external-ltr.svg );
    background-repeat: no-repeat;
	background-position: center right;
	background-size: 12px;
    padding-right: 14px;

	&:hover {
		color: darken( @link-ext, 10% );
	}

	&:visited {
		color: @link-ext-visited;

		&:hover {
			color: darken( @link-ext-visited, 10% );
		}
	}
}

.mw-content-rtl .mw-parser-output a.extiw,
.mw-content-rtl .mw-parser-output a.extiw:active,
.mw-content-rtl .mw-parser-output a.external {
	background-image: url( images/external-rtl.svg );
}

a.mw-selflink {
	color: inherit;
	font-weight: bold;
	text-decoration: inherit;
}
/* ... */

